--- a/HMM Tagger.ipynb
+++ b/HMM Tagger.ipynb
@@ -65,9 +65,23 @@
    },
    "outputs": [],
    "source": [
+    "!wget https://raw.githubusercontent.com/rafaeln/hmm-tagger/master/helpers.py -O helpers.py\n",
+    "!wget https://raw.githubusercontent.com/rafaeln/hmm-tagger/master/tags-universal.txt -O tags-universal.txt\n",
+    "!wget https://github.com/rafaeln/hmm-tagger/raw/master/brown-universal.txt -O brown-universal.txt\n",
+    "!pip install pomegranate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "# Jupyter \"magic methods\" -- only need to be run once per kernel restart\n",
     "%load_ext autoreload\n",
-    "%aimport helpers, tests\n",
+    "%aimport helpers\n",
     "%autoreload 1"
    ]
   },
