Update HMM warmup (optional).ipynb

--- a/HMM warmup (optional).ipynb
+++ b/HMM warmup (optional).ipynb
@@ -33,6 +33,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/rafaeln/hmm-tagger/master/helpers.py -O helpers.py\n",
+    "!pip install pomegranate"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": true
