--- a/HMM Tagger.ipynb
+++ b/HMM Tagger.ipynb
@@ -690,7 +690,7 @@
     "    a sequence.\n",
     "    \n",
     "    For example, if 18 sequences end with DET, then you should return a\n",
-    "    dictionary such that your_starting_counts[DET] == 18\n",
+    "    dictionary such that your_ending_counts[DET] == 18\n",
     "    \"\"\"\n",
     "    # TODO: Finish this function!\n",
     "    raise NotImplementedError\n",
